--- a/src/main/resources/templates/admin-reports.html
+++ b/src/main/resources/templates/admin-reports.html
@@ -8,7 +8,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/admin-common :: head(title='Manage Reports')}"></head>
 <body class="admin-body">
-    <div th:replace="~{fragments/admin-common :: admin-nav}"></div>
+    <div th:replace="~{fragments/modular-nav :: nav(${@navigationConfig.adminNav})}"></div>
     <div class="container py-4 py-md-5" style="max-width: 1200px;">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header bg-primary text-white">
