--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -11,7 +11,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <link rel="stylesheet" href="/css/multi-step-form.css">
 </head>
 <body>
-    <div th:replace="~{fragments/nav :: nav}"></div>
+    <div th:replace="~{fragments/modular-nav :: nav(${@navigationConfig.studentNav})}"></div>
     <div class="main-content">
         <div class="container content-container">
             <div class="content-card">
