--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -7,7 +7,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/common/admin-common :: head(title='Admin Dashboard')}"></head>
+<head th:replace="~{fragments/admin-common :: head(title='Admin Dashboard')}"></head>
 <head>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/admin-dashboard.css">
@@ -140,7 +140,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
         </div>
     </div>
 
-    <div th:replace="~{fragments/common/admin-common :: scripts}"></div>
+    <div th:replace="~{fragments/admin-common :: scripts}"></div>
 </body>
 
 </html>
