--- a/src/main/resources/templates/report-detail.html
+++ b/src/main/resources/templates/report-detail.html
@@ -111,7 +111,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!-- Change Status Modal -->
 <div class="modal fade" id="changeStatusModal" tabindex="-1" aria-labelledby="changeStatusModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="changeStatusModalLabel">Change Report Status</h5>
