--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -19,6 +19,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/material_blue.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/status.css">
 </head>
 
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
