--- a/src/main/resources/templates/fragments/status-help-modal.html
+++ b/src/main/resources/templates/fragments/status-help-modal.html
@@ -23,7 +23,7 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/.
                                 <span>Pending Review</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill status-under-investigation me-2"></div>
+                                <div class="status-pill status-under-review me-2"></div>
                                 <span>Under Review</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
