--- a/src/main/resources/templates/admin-reports.html
+++ b/src/main/resources/templates/admin-reports.html
@@ -25,7 +25,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                                 <span th:text="${#strings.substringBefore(report.reportId, '-')}" class="d-inline d-sm-none"></span>
                                 <span th:text="${report.reportId}" class="d-none d-sm-inline"></span>
                             </span>
-                            <span class="badge rounded-pill" th:classappend="${report.status.displayName == 'Pending Review' ? 'bg-warning text-dark' : (report.status.displayName == 'Under Investigation' ? 'bg-info text-dark' : (report.status.displayName == 'Action Taken' or report.status.displayName == 'Resolved' ? 'bg-success' : 'bg-secondary'))}" th:text="${report.status.displayName}"></span>
+                            <span class="badge rounded-pill" th:classappend="${report.status.displayName == 'Pending Review' ? 'bg-warning text-dark' : (report.status.displayName == 'Under Review' ? 'bg-info text-dark' : (report.status.displayName == 'Resolved' ? 'bg-success' : 'bg-secondary'))}" th:text="${report.status.displayName}"></span>
                         </a>
                     </div>
                 </div>
