--- a/src/main/resources/templates/admin-appointments.html
+++ b/src/main/resources/templates/admin-appointments.html
@@ -31,7 +31,11 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                                 <div class="list-group list-group-flush">
                                     <a th:each="appointment : ${weekEntry.value}" th:href="@{/admin/appointment/{id}(id=${appointment.id})}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                                         <span class="fw-bold" th:text="${appointment.name}"></span>
-                                        <span class="ms-auto pe-4" th:text="${#temporals.format(appointment.preferredDateTime, 'E, dd-MMM-yyyy HH:mm')}"></span>
+                                        <div class="d-flex align-items-center">
+                                            <span class="ms-auto pe-3" th:text="${#temporals.format(appointment.preferredDateTime, 'E, dd-MMM-yyyy HH:mm')}"></span>
+                                            <div class="status-pill" 
+                                                 th:classappend="${'status-' + #strings.replace(#strings.toLowerCase(appointment.status.name()), '_', '-')}"></div>
+                                        </div>
                                     </a>
                                 </div>
                             </div>
