--- a/src/main/resources/templates/report-detail.html
+++ b/src/main/resources/templates/report-detail.html
@@ -106,10 +106,10 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             <hr class="my-4">
 
             <div class="d-flex flex-column flex-md-row justify-content-between gap-2">
-                <a th:href="@{/admin/report}" class="btn btn-secondary">Back to Reports</a>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#changeStatusModal">
+                <button type="button" class="btn btn-primary order-1 order-md-2" data-bs-toggle="modal" data-bs-target="#changeStatusModal">
                     Change Status
                 </button>
+                <a th:href="@{/admin/report}" class="btn btn-secondary order-2 order-md-1">Back to Reports</a>
             </div>
         </div>
     </div>
