fix(admin): make date field in reschedule modal readonly

--- a/src/main/resources/templates/fragments/reschedule-modal.html
+++ b/src/main/resources/templates/fragments/reschedule-modal.html
@@ -16,7 +16,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="newDate" name="newDate" placeholder="Select a date" required>
+                                <input type="text" class="form-control" id="newDate" name="newDate" placeholder="Select a date" required readonly>
                                 <label for="newDate" class="small text-muted">New Date</label>
                             </div>
                         </div>
