--- a/src/main/resources/templates/admin-appointments.html
+++ b/src/main/resources/templates/admin-appointments.html
@@ -15,6 +15,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                 <h2 class="h5 mb-0">Appointment Requests</h2>
             </div>
             <div class="card-body">
+                <div th:replace="~{fragments/search :: searchInput('Search appointments...')}"></div>
                 <div th:if="${appointmentsPage.totalElements == 0}">
                     <p class="text-center text-muted mb-0">No appointment requests yet.</p>
                 </div>
@@ -51,5 +52,6 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
         </div>
     </div>
     <div th:replace="~{fragments/admin-common :: scripts}"></div>
+    <div th:replace="~{fragments/search :: searchScript('.col-12')}"></div>
 </body>
 </html>
